--- a/BabyBirthday/BabyBirthday/Info.plist
+++ b/BabyBirthday/BabyBirthday/Info.plist
@@ -54,5 +54,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>This app wants to take pictures &amp; videos.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app wants to use your picture &amp; video library.</string>
 </dict>
 </plist>
