--- a/BabyBirthday/BabyBirthday/Info.plist
+++ b/BabyBirthday/BabyBirthday/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app wants to take pictures &amp; videos.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app wants to use your picture &amp; video library.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -43,6 +47,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarHidden</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
@@ -54,9 +60,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>This app wants to take pictures &amp; videos.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app wants to use your picture &amp; video library.</string>
 </dict>
 </plist>
