--- a/BabyBirthday/BabyBirthday/Info.plist
+++ b/BabyBirthday/BabyBirthday/Info.plist
@@ -21,9 +21,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>This app wants to take pictures &amp; videos.</string>
+	<string>This app wants to take pictures</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app wants to use your picture &amp; video library.</string>
+	<string>This app wants to use your picture library.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -60,5 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app wants to save pictures</string>
 </dict>
 </plist>
